Expand definitions in the 'concepts' part of the background theory

--- a/thesis/literature.bib
+++ b/thesis/literature.bib
@@ -169,3 +169,11 @@ Best thesis ever:
 	year = {2021},
 	urldate = {2021-07-31},
 }
+@book{dlBookGoodf,
+	author = {Ian Goodfellow and Yoshua Bengio and Aaron Courville},
+	publisher = {MIT Press},
+	title = {Deep Learning},
+	url = {http://www.deeplearningbook.org},
+	year = {2016},
+}
+
