--- a/thesis/settings.tex
+++ b/thesis/settings.tex
@@ -78,8 +78,9 @@
 \usepackage{tikz}
 \usetikzlibrary{shapes.geometric, arrows}
 % define some elements
-\tikzstyle{startstop} = [rectangle, rounded corners, minimum width=3cm, minimum height=1cm,text centered, draw=black, fill=blue!30]
+\tikzstyle{box} = [rectangle, rounded corners, minimum width=3cm, minimum height=1cm,text centered, draw=black, fill=black!5]
 \tikzstyle{arrow} = [thick,->,>=stealth]
+\usepackage{varwidth}
 
 % Some code highlighting styles you can use with lstlistings
 % C++ code style similar to default eclipse
